language stuff more or less done.

--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -5,3 +5,10 @@ text.file = File
 text.edit = Edit
 text.help = Help
 text.exit = Close
+text.new = New
+text.delete = Delete
+text.statusbar = Status
+text.table.description = Description
+text.table.prio = Prio
+text.table.category = Category
+text.table.date = Date
