--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -5,3 +5,10 @@ text.file = Arkiv
 text.edit = Redigera
 text.help = Hjälp
 text.exit = Stäng
+text.new = Ny
+text.delete = Ta bort
+text.statusbar = Status
+text.table.description = Beskrivning
+text.table.prio = Prio
+text.table.category = Kategori
+text.table.date = Datum
