language in the dialog box.

--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -12,3 +12,5 @@ text.table.description = Description
 text.table.prio = Prio
 text.table.category = Category
 text.table.date = Date
+text.dialog.apply = Apply
+text.dialog.cancel = Cancel
