--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -12,3 +12,5 @@ text.table.description = Beskrivning
 text.table.prio = Prio
 text.table.category = Kategori
 text.table.date = Datum
+text.dialog.apply = Verkställ
+text.dialog.cancel = Avbryt
