superficial progress slider stuff

--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -8,9 +8,10 @@ text.exit = Close
 text.new = New
 text.delete = Delete
 text.statusbar = Status
-text.table.description = Description
-text.table.prio = Prio
-text.table.category = Category
-text.table.date = Date
+text.task.description = Description
+text.task.prio = Prio
+text.task.category = Category
+text.task.date = Date
+text.task.progress = Progress
 text.dialog.apply = Apply
 text.dialog.cancel = Cancel
