--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -8,9 +8,10 @@ text.exit = Stäng
 text.new = Ny
 text.delete = Ta bort
 text.statusbar = Status
-text.table.description = Beskrivning
-text.table.prio = Prio
-text.table.category = Kategori
-text.table.date = Datum
+text.task.description = Beskrivning
+text.task.prio = Prio
+text.task.category = Kategori
+text.task.date = Datum
+text.task.progress = Fortgång
 text.dialog.apply = Verkställ
 text.dialog.cancel = Avbryt
