--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -12,6 +12,6 @@ text.task.description = Beskrivning
 text.task.prio = Prio
 text.task.category = Kategori
 text.task.date = Datum
-text.task.progress = Fortgång
+text.task.progress = Fortgång (%)
 text.dialog.apply = Verkställ
 text.dialog.cancel = Avbryt
