--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -12,6 +12,6 @@ text.task.description = Description
 text.task.prio = Prio
 text.task.category = Category
 text.task.date = Date
-text.task.progress = Progress
+text.task.progress = Progress (%)
 text.dialog.apply = Apply
 text.dialog.cancel = Cancel
