language selection menu

--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -4,6 +4,7 @@ my.question=Do you speak English? (default)
 text.file = File
 text.edit = Edit
 text.help = Help
+text.language = Language
 text.exit = Close
 text.new = New
 text.delete = Delete
