--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -4,6 +4,7 @@ my.question=Snackar du engelska?
 text.file = Arkiv
 text.edit = Redigera
 text.help = Hjälp
+text.language = Språk
 text.exit = Stäng
 text.new = Ny
 text.delete = Ta bort
