--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -14,5 +14,6 @@ text.task.prio = Prio
 text.task.category = Category
 text.task.date = Date
 text.task.progress = Progress (%)
+text.task.done = Done
 text.dialog.apply = Apply
 text.dialog.cancel = Cancel
