--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -14,5 +14,6 @@ text.task.prio = Prio
 text.task.category = Kategori
 text.task.date = Datum
 text.task.progress = Fortgång (%)
+text.task.done = Klart
 text.dialog.apply = Verkställ
 text.dialog.cancel = Avbryt
