main functionality of list is now complete.

--- a/src/i18n/bundle.properties
+++ b/src/i18n/bundle.properties
@@ -1,6 +1,3 @@
-my.hello=Hello (default)
-my.goodbye=Bye (default)
-my.question=Do you speak English? (default)
 text.file = File
 text.edit = Edit
 text.help = Help
@@ -17,3 +14,4 @@ text.task.progress = Progress (%)
 text.task.done = Done
 text.dialog.apply = Apply
 text.dialog.cancel = Cancel
+text.list.check = Check
