--- a/src/i18n/bundle_sv_SE.properties
+++ b/src/i18n/bundle_sv_SE.properties
@@ -1,6 +1,3 @@
-my.hello=Hejsan
-my.goodbye=Bajs
-my.question=Snackar du engelska?
 text.file = Arkiv
 text.edit = Redigera
 text.help = Hjälp
@@ -17,3 +14,4 @@ text.task.progress = Fortgång (%)
 text.task.done = Klart
 text.dialog.apply = Verkställ
 text.dialog.cancel = Avbryt
+text.list.check = Avklara
